[package]
name = "patreon-dl"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
indicatif = "0.15"